fix: date picker alignment

--- a/source.css
+++ b/source.css
@@ -1,6 +1,6 @@
 /* ───────────────────────────────────────────────────
 /* SHIMMERING FOCUS by @pseudometa
-Version 3.489
+Version 3.490
 Source CSS: https://github.com/chrisgrieser/shimmering-focus/blob/main/source.css
 MIT License
 ──────────────────────────────────────────────────── */
@@ -2645,8 +2645,11 @@ body .metadata-property:hover {
 }
 
 /* Date Picker */
-.metadata-property-value input[type="date"] {
-	padding-left: 24px;
+/* color of the date picker cannot be changed in a flexible manner
+ * https://stackoverflow.com/questions/62162645/change-color-of-chromes-calendar-icon-in-html-date-input
+ * */
+.metadata-property-value input:is([type="date"],[type="datetime-local"]) {
+	margin-left: -4px;
 }
 
 /* links in metadata */
